Try to fix sprites and make some improvements with checkboxes and collapsable panels.

--- a/packages/vapor/less/panels/collapsable.less
+++ b/packages/vapor/less/panels/collapsable.less
@@ -97,10 +97,8 @@
         border-top: @bottom-top-border-height solid @table-header-border;
         border-bottom: @bottom-top-border-height solid @table-header-border;
 
-        margin-bottom: 15px;
-
         + .panel {
-            margin-top: 5px;
+            margin-top: 15px;
         }
 
         .panel-heading {
@@ -125,7 +123,7 @@
                 display: inline-block;
                 position: absolute;
                 right: 11px;
-                top: 14px;
+                top: 10px;
                 z-index: -1;
             }
 
